minio/manifests/minio-configuration-manifest.yaml
# Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: minio-system

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-system
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - name: s3
      port: 9000
      targetPort: 9000

---

# Ingress console

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio-system
  annotations:
    cert-manager.io/cluster-issuer: <CLUSTER-ISSUER>
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <host>
      secretName: <TLS_CERTIFICATE>
  rules:
    - host: <HOST>
      http:
        paths:
          - path: /console/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-console
                port:
                  number: 9001

---

# Ingress API

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio-system
  annotations:
    cert-manager.io/cluster-issuer: <CLUSTER-ISSUER>
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <host>
      secretName: <TLS_CERTIFICATE>
  rules:
    - host: <HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-proxy
                port:
                  number: 8080
